


=== Azure 多個可用區域的新 VM

從 Cloud Volumes ONTAP 9.13.1 開始、下列 VM 類型支援 Azure 多個可用性區域、以進行新的和現有的高可用度配對部署：

* L16s_v3
* L32s_v3
* L48s_v3
* L64s_v3


link:https://docs.netapp.com/us-en/cloud-volumes-ontap-relnotes/reference-configs-azure.html["Azure支援的組態"^]



== 2023 年 12 月 6 日



=== Cloud Volumes ONTAP 9.14.1 RC1

BlueXP 現在可以在 AWS 、 Azure 和 Google Cloud 中部署和管理 Cloud Volumes ONTAP 9.14.1 。



== 2023 年 12 月 5 日

我們進行了下列變更。



=== Azure 的新區域支援



==== 單一可用性區域區域支援

以下地區現在支援 Azure 中 Cloud Volumes ONTAP 9.12.1 GA 及更新版本的高可用度單一可用度區域部署：

* 特拉維夫
* 米蘭




==== 支援多種可用性區域

以下地區現在支援 Azure 中 Cloud Volumes ONTAP 9.12.1 GA 及更新版本的高可用度多重可用度區域部署：

* 印度中部
* 挪威東部
* 瑞士北部
* 南非北部
* 阿拉伯聯合大公國北部
* 中國北方 3.


如需所有區域的清單、請參閱 https://bluexp.netapp.com/cloud-volumes-global-regions["Azure 下的 Global Regions Map"^]。



== 2023 年 11 月 10 日

在 3.9.35 版 Connector 中引入了以下變更。



=== Google Cloud 現在支援柏林地區

現在、 Google Cloud for Cloud Volumes ONTAP 9.12.1 GA 及更新版本均支援柏林地區。

如需所有區域的清單、請參閱 https://bluexp.netapp.com/cloud-volumes-global-regions["Google Cloud 下的全球區域地圖"^]。



== 2023 年 11 月 8 日

在 3.9.35 版 Connector 中引入了以下變更。



=== AWS 現在支援 Tel Aviv 區域

AWS for Cloud Volumes ONTAP 9.12.1 GA 及更新版本現在支援 Tel Aviv 區域。

如需所有區域的清單、請參閱 https://bluexp.netapp.com/cloud-volumes-global-regions["AWS 下的 Global Regions Map"^]。



== 2023 年 11 月 1 日

連接器 3.9.34 版隨附下列變更。



=== Google Cloud 現在支援沙烏地阿拉伯地區

現在、 Google Cloud for Cloud Volumes ONTAP 和 Connector for Cloud Volumes ONTAP 9.12.1 GA 及更新版本均支援沙烏地阿拉伯地區。

如需所有區域的清單、請參閱 https://bluexp.netapp.com/cloud-volumes-global-regions["Google Cloud 下的全球區域地圖"^]。



== 2023 年 10 月 23 日

連接器 3.9.34 版隨附下列變更。



=== Azure 支援 HA 多重可用性區域部署的新區域

Azure 中的下列區域現在支援 Cloud Volumes ONTAP 9.12.1 GA 及更新版本的高可用度多重可用度區域部署：

* 澳洲東部
* 東南亞
* 法國中部
* 北歐洲
* 卡塔爾中部
* 瑞典中部
* 西歐
* 美國西部 2.


如需支援多個可用區域的所有區域清單、請參閱 https://bluexp.netapp.com/cloud-volumes-global-regions["Azure 下的 Global Regions Map"^]。



== 2023 年 10 月 6 日

連接器 3.9.34 版隨附下列變更。



=== Cloud Volumes ONTAP 9.14.0%
